Fixes an spacing bug on iPhone X.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -253,7 +253,7 @@ body {
 
 
 #projects-container {
-  padding-top: $spacing-unit * 2;
+  padding-top: $spacing-unit * 3;
 }
 
 .project-tour {
